--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "homepage": "https://github.com/xXRex45Xx/mkc-songbook/tree/main#readme",
     "description": "",
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "mongoose": "^8.5.2"
