--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "run": "^1.5.0",
