--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,17 @@
     "homepage": "https://github.com/xXRex45Xx/mkc-songbook/tree/main#readme",
     "description": "",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "joi": "^17.13.3",
-        "mongoose": "^8.5.2"
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.5.2",
+        "nodemailer": "^6.9.15",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
+        "passport-local": "^1.0.0"
     },
     "type": "module"
 }
