--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
         "mongoose": "^8.5.2",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
+        "passport-google-oauth": "^2.0.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0"
     },
