--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.7",
         "flowbite-react": "^0.10.1",
+        "js-cookie": "^3.0.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-loader-spinner": "^6.1.6",
