--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.2",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-google-oauth": "^2.0.0",
