--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
         "passport": "^0.7.0",
         "passport-google-oauth": "^2.0.0",
         "passport-jwt": "^4.0.1",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "uuid": "^11.0.3"
     },
     "type": "module"
 }
