--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node index.js",
+        "dev": "nodemon ."
     },
     "repository": {
         "type": "git",
@@ -33,5 +34,8 @@
         "passport-local": "^1.0.0",
         "uuid": "^11.0.3"
     },
-    "type": "module"
+    "type": "module",
+    "devDependencies": {
+        "nodemon": "^3.1.10"
+    }
 }
