--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
         "vite": "^5.4.1",
+        "vite-plugin-pwa": "^1.1.0",
         "vite-plugin-svgr": "^4.2.0"
     }
 }
