--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
         "@react-oauth/google": "^0.12.1",
         "@reduxjs/toolkit": "^2.2.7",
         "flowbite-react": "^0.10.1",
